--- a/src/app/globalStyles/projects.module.css
+++ b/src/app/globalStyles/projects.module.css
@@ -1,47 +1,65 @@
-.projectContainer{
-    height: calc(100vh - 110px);
+.projectContainer {
+    /*height: calc(100vh - 110px);*/
     background-color: #111111;
     color: #fff;
-    padding-top: 80px;
+    /*padding-top: 80px;*/
     display: flex;
     flex-direction: column;
-
+    border: 2px solid red;
+    padding: 5px;
 
 }
-.projectContent{
+
+.projectContainerButton {
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.projectContainerButton a {
+    width: 90% !important;
+}
+
+.projectContent {
     /*display: flex;*/
     /*flex-wrap: wrap;*/
     /*align-items: center;*/
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /*display: grid;*/
+    /*grid-template-columns: 1fr 1fr;*/
     /*height: 90%;*/
-    width: 80vw;
+    /*width: 80vw;*/
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 }
-.projectImageContainer{
-    /*flex: 1;*/
 
-}
-.projectImageContainer img{
-    height: 100%;
-    object-fit: cover;
-    object-position: top;
+.projectImageContainer {
     width: 100%;
-
 }
-.projectDetails{
+
+.projectImageContainer img {
+    /*height: 100%;*/
+    /*object-fit: cover;*/
+    /*object-position: top;*/
+    width: 100%;
+    height: auto;
+}
+
+.projectDetails {
     /*flex: 1;*/
-
 }
-.projectDetails h2{
+
+.projectDetails h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
 }
-.projectImageContainer img{
 
-    height: 500px;
-
-}
 
 /* styles.module.css */
 
@@ -89,3 +107,108 @@
     margin-right: 5px;
 }
 
+@media (min-width: 400px) {
+    .projectContainerButton {
+        flex-direction: row-reverse;
+        gap: 20px;
+        justify-content: space-between;
+    }
+
+    .projectContainerButton a {
+        width: max-content !important;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .projectContent {
+        padding: 5px;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .projectDetails,
+    .projectImageContainer{
+        height: 100%;
+    }
+
+    .projectContainerButton {
+        flex-direction: row-reverse;
+        gap: 20px;
+        justify-content: left;
+    }
+
+    .projectContainerButton a {
+        width: max-content !important;
+    }
+
+    .projectImageContainer {
+        width: 100%;
+    }
+
+    .projectImageContainer img {
+        max-width: 500px;
+        height: auto;
+    }
+
+}
+@media (min-width: 2500px) {
+    .projectContainer{
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .projectContent {
+        /*height: 100%;*/
+        padding: 5px;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        border: 2px solid red;
+        width: 100%;
+
+    }
+
+    .projectDetails,
+    .projectImageContainer{
+        height: 100%;
+        border: 2px solid red;
+    }
+
+    .projectContainerButton {
+        flex-direction: row-reverse;
+        gap: 20px;
+        justify-content: left;
+    }
+
+    .projectContainerButton a {
+        width: max-content !important;
+    }
+
+    .projectImageContainer {
+        width: 100%;
+    }
+
+    .projectImageContainer img {
+        height: 900px;
+        width: auto;
+    }
+    .projectDetails h2 {
+        font-size: 4rem;
+        margin-bottom: 10px;
+    }
+    .projectTechnologies p {
+        font-size: 2rem;
+    }
+    .projectTechnologies li {
+        font-size: 1.4rem;
+        margin-bottom: 5px;
+        display: flex;
+        align-items: center;
+    }
+
+
+
+}
