--- a/src/app/components/Projects/LatestProjectContainer/styles.module.css
+++ b/src/app/components/Projects/LatestProjectContainer/styles.module.css
@@ -3,7 +3,6 @@
     padding-top: 60px;
     padding-bottom: 120px;
 
-    border: 2px solid darkgoldenrod;
 }
 
 .lastProjectTitle {
@@ -14,6 +13,11 @@
     margin-bottom: 40px;
     box-sizing: border-box;
     padding: 0 20px;
+
+    background: linear-gradient(to right, #ffffff, #313131, #2f2f2f);
+    -webkit-background-clip: text;
+    color: transparent;
+
 }
 
 .projectListContent {
