--- a/src/app/components/header/styles.module.css
+++ b/src/app/components/header/styles.module.css
@@ -1,5 +1,9 @@
 .menu{
     height: 110px;
+    position: relative;
+    overflow: hidden;
+    border-bottom: 1px solid #0a0a0a;
+
 }
 .menu a{
     font-family: 'Poppins', sans-serif;
@@ -9,6 +13,63 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+/* styles.module.css */
+/* Adicione estas regras à classe .menu para estrelas e cometas no header */
+
+.starHeader {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    background-color: #fff;
+    animation: twinkle 1s infinite, moveStars linear infinite;
+}
+
+.cometHeader {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background-color: #fff;
+    animation: cometMove linear infinite;
+}
+
+@keyframes twinkle {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+}
+
+@keyframes moveStars {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(100vh);
+    }
+}
+
+@keyframes cometMove {
+    from {
+        transform: translateX(0) translateY(-50vh);
+    }
+    to {
+        transform: translateX(100vw) translateY(100vh);
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar {
+        position: absolute;
+        display: block;
+        left: 0;
+        right: 0;
+        transition: .5s;
+    }
+}
+
 @media(max-width: 767px){
 
     .navbar{
