--- a/src/app/components/utils/buttons/styles.module.css
+++ b/src/app/components/utils/buttons/styles.module.css
@@ -1,18 +1,19 @@
-.about{
-    padding: .93rem 2.5rem;
+.about,
+.externalNavButton{
+    padding: 12px 16px;
     border-radius: .34rem;
-    background: linear-gradient(#694DF8, #411DB9);
+    /*background: linear-gradient(#694DF8, #411DB9);*/
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     color: #1A0033;
     transition: all ease .3s;
     font-size: 18px;
     line-height: 1.33;
-
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     display: flex;
     gap: 10px;
     align-items: center;
+    justify-content: space-between;
 }
 .about:hover{
     background: linear-gradient(90deg, #694DF8, #411DB9);
@@ -55,7 +56,7 @@
 @media(max-width: 600px) {
 
     .about{
-        padding: 12px 16px;
-        font-size: 16px;
+        /*padding: 12px 16px;*/
+        /*font-size: 16px;*/
     }
 }
