--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@ body{
     margin: 0;
     font-family: Arial,Helvetica, sans-serif;
 }
+
+
 ul{
     padding: 0;
     list-style: none;
@@ -21,6 +23,14 @@ img{
 a{
     text-decoration: none;
     color: inherit;
+}
+.teste{
+    /*border: 2px solid red;*/
+    background-image: url("https://uploaddeimagens.com.br/images/004/723/165/full/banner-bg.png?1706225142");
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 /*:root {*/
 /*  --foreground-rgb: 0, 0, 0;*/
